Deep rewrite of ClassLoading, Modules, and GraalVM topics (batch 3)
by-topic/core/classloading/index.md (687 → 1112 lines):
- Class loading phases: Loading/Linking/Initialization details
- CDS/AppCDS/AOT: .jsa structure, JEP 350/483/516
- Custom ClassLoaders: URLClassLoader, ServiceLoader, hot deploy
- Class unloading: conditions, Metaspace reclamation, GC support
- Troubleshooting: CNFE vs NCDFE, LinkageError subtypes

by-topic/core/modules/index.md (598 → 935 lines):
- module-info.java: all directives with transitive/static
- Module Graph resolution: readability vs accessibility
- --illegal-access evolution: permit→warn→deny→removed
- jlink: --compress, CDS integration, Docker multi-stage
- ServiceLoader: provides...with, stream() lazy loading
- Migration: automatic modules, split packages, jdeps

by-topic/core/graalvm/index.md (397 → 764 lines):
- Architecture: Graal compiler, Truffle, SubstrateVM
- JVMCI (JEP 243): interface hierarchy, C2 replacement flow
- Native Image: 4-phase build, Closed-World, reflection config
- Project Leyden vs GraalVM comparison
- Truffle languages: polyglot API examples
- Framework integration: Spring/Quarkus/Micronaut/Helidon

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>